[package]
name = "adventureland-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console", "Window"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
futures-lite = "2.6.1"
async-channel = "2.5.0"
event-listener = "5.4.1"
web-time = "1.1.0"

[profile.release]
opt-level = "s"
